--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -1,6 +1,8 @@
+@import url('https://fonts.googleapis.com/css?family=Fira+Sans&display=swap');
+
 /* ======= Base ======= */
 body {
-    font-family: 'Roboto', sans-serif;
+    font-family: 'Fira Sans', 'Roboto', sans-serif;
     color: $text-color-secondary;
     background: $smoky-white;
     font-size: 14px;
