--- a/_includes/career-profile.html
+++ b/_includes/career-profile.html
@@ -7,12 +7,14 @@
       <i class="fas fa-circle fa-stack-2x"></i>
       <i class="fas fa-user fa-stack-1x fa-inverse"></i>
     </span>
-    {{ career-profile.title }}
+    &nbsp;{{ career-profile.title }}
   </h2>
 
   <div class="summary">
     {{ career-profile.summary | markdownify }}
-  </div><!--//summary-->
-    
-</section><!--//section-->
+  </div>
+  <!--//summary-->
+
+</section>
+<!--//section-->
 {% endif %}
