Second round of personal data filling

--- a/_includes/skills.html
+++ b/_includes/skills.html
@@ -9,7 +9,7 @@
     </span>
     &nbsp;{{ skills.title }}
   </h2>
-
+  {{ skills.intro | markdownify }}
   <div class="skillset">
 
     {% for skill in skills.toolset %}
